--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <div id="navbar">
         <img src="https://cloudfront.fitnessblender.com/assets/img/fit-ogp-logo.jpg" alt="">
-        <a href="">WORKOUTS</a>
+        <a href="workouts.html">WORKOUTS</a>
         <p>PROGRAMS</p>
         <P>HEALTHY LIVING</P>
         <p>COMMUNITY</p>
         <p>ABOUT</p>
         <p>STORE</p>
-        <p>MEBERSHIP</p>
-        <a href="">Hi! Sign in</a>
+        <a href="signup.html">MEBERSHIP</a>
+        <a href="Signin.html">Hi! Sign in</a>
         <img src="https://www.seekpng.com/png/full/384-3843306_png-file-search-box-icon-png.png" alt="">
         <a href="">
         <img src="https://cdn0.iconfinder.com/data/icons/minimal-set-seven/32/minimal-49-512.png" alt="">
