--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="navbar">
-        <img src="https://cloudfront.fitnessblender.com/assets/img/fit-ogp-logo.jpg" alt="">
+        <img id="mainLogo" src="https://cloudfront.fitnessblender.com/assets/img/fit-ogp-logo.jpg" alt="">
         <a href="workouts.html">WORKOUTS</a>
         <p>PROGRAMS</p>
         <P>HEALTHY LIVING</P>
@@ -23,6 +23,7 @@
         <img src="https://cdn0.iconfinder.com/data/icons/minimal-set-seven/32/minimal-49-512.png" alt="">
         </a>
     </div>
+
     <div id="container1">
         <div>
             <h1>Feel Great.</h1>
@@ -49,7 +50,7 @@
         <div id="card1">
             <p>Workout Videos</p>
             <p>Exercise with certified personal trainers whether you’re at home or on the road.</p>
-            <p>Find a workout</p>
+            <p id="FAW">Find a workout</p>
             <img src="https://cloudfront.fitnessblender.com/assets/img/homepage/workouts-1440.webp" alt="">
         </div>
         <div id="card2">
@@ -168,3 +169,6 @@
     </div>
 </body>
 </html>
+
+<script src="navbar.js"></script>
+<script src="index.js"></script>
