--- a/workouts.html
+++ b/workouts.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="navbar">
-        <img src="https://cloudfront.fitnessblender.com/assets/img/fit-ogp-logo.jpg" alt="">
+        <img id="mainLogo" src="https://cloudfront.fitnessblender.com/assets/img/fit-ogp-logo.jpg" alt="">
         <a href="workouts.html">WORKOUTS</a>
         <p>PROGRAMS</p>
         <P>HEALTHY LIVING</P>
@@ -241,3 +241,5 @@
     </div>
 </body>
 </html>
+
+<script src="navbar.js"></script>
